docs-kits_versioned_docs/version-24.08/kits/demand-and-capacity-management-kit/changelog.md
---
id: changelog
title: Changelog
description: 'What has changed recently?'
toc_min_heading_level: 2
toc_max_heading_level: 2
---

![DCM kit banner](/img/kit-icons/dcm-kit-icon.svg)

## DCM KIT Changelog

All notable changes to this Kit will be documented in this file.

## [1.1.0] - unreleased

### Added

- Added multiple diagrams to [Development View](software-development-view/overview.md)
- Added APIs to [Development View](software-development-view/overview.md)
- Added Use Case to [Adoption View](./adoption-view/overview.md)
- Added Q&A to [Adoption View](./adoption-view/overview.md)

### Changed

- Restructured [Development View](software-development-view/overview.md)
- Restructured [Adoption View](./adoption-view/overview.md)
- Recolored sequence diagram in [Architecture View](./architecture-view/overview.md)
- Moved onboarding content from [Operation View](./operation-view.md) to [Adoption View](./adoption-view/overview.md)

## [1.0.0] - 2024-05-24

### Added

- Added [DCM Operation View](./operation-view.md)

### Changed

- Changed banner image file location and converted .png image to .svg
- Updated aspect models in [Architecture View](./architecture-view/overview.md) to new versions
- Updated aspect models and API definitions in [Development View](software-development-view/overview.md) to new versions
- Updated WeekBasedMaterialDemand data model and API chapters to new data model (Replaced MaterialDemand with WeekBasedMaterialDemand aspect model)
- Updated choice of words and writing pattern throughout the documentation

### Removed

- ./.

## [0.2.0] - 2024-03-08

### Added

- Added Architecture View
- Added IdBasedRequestForUpdate data model reference to Adoption View
- Added IdBasedComment data model reference to Adoption View
- Added IdBasedRequestForUpdate data model chapter to Development View
- Added IdBasedComment data model chapter to Development View
- Added IdBasedRequestForUpdate API chapter to Development View
- Added IdBasedComment API chapter to Development View

### Changed

- Updated DCM standard references in Adoption View (Merged CX-0046, CX-0047 and CX-0048 into CX-0128)
- Updated data model references in Adoption View
- Updated MaterialDemand data model chapter to new data models and versions (Replaced WeekBasedMaterialDemand with MaterialDemand aspect model)
- Updated WeekBasedCapacityGroup data model chapter to new data models and versions
- Updated MaterialDemand API chapter to new API definitions
- Updated WeekBasedCapacityGroup API chapter to new API definitions

### Removed

n/a

## [0.1.0] - 2023-03-01

### Added

- Adoption View
- Development View

### Changed

n/a

### Removed

n/a

## Notice

This work is licensed under the [CC-BY-4.0](https://creativecommons.org/licenses/by/4.0/legalcode)

- SPDX-License-Identifier: CC-BY-4.0
- SPDX-FileCopyrightText: 2023,2024 ZF Friedrichshafen AG
- SPDX-FileCopyrightText: 2023,2024 Bayerische Motoren Werke Aktiengesellschaft (BMW AG)
- SPDX-FileCopyrightText: 2023,2024 SAP SE
- SPDX-FileCopyrightText: 2023,2024 Volkswagen AG
- SPDX-FileCopyrightText: 2023,2024 Mercedes Benz Group AG
- SPDX-FileCopyrightText: 2023,2024 BASF SE
- SPDX-FileCopyrightText: 2023,2024 SupplyOn AG
- SPDX-FileCopyrightText: 2023,2024 Henkel AG & Co.KGaA
- SPDX-FileCopyrightText: 2023,2024 Fraunhofer-Gesellschaft zur Förderung der angewandten Forschung e.V (Fraunhofer)
- SPDX-FileCopyrightText: 2023,2024 Contributors to the Eclipse Foundation
